@@ -4,6 +4,8 @@ Changelog
 1.0rc5 - unreleased
 -------------------
 
+* Preserve resolvers in the rules document when updating from an old namespace.
+
 * Add javascript / css include support to WSGIResolver.
 
 * Refactoring if WSGI middleware to use WebOb better and fix corner cases.
